--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "antsy",
   "version": "3.0.3",
+  "type": "module",
   "description": "draw full-color (xterm-256) ansi graphics into a buffer",
   "keywords": [
     "ansi",
@@ -18,16 +19,16 @@
     "clean": "rm -rf lib",
     "distclean": "npm run clean && rm -rf node_modules npm-debug.log",
     "prepare": "npm run build",
-    "test": "npm run build && mocha -R spec --colors lib/test"
+    "test": "npm run build && mocha"
   },
   "devDependencies": {
-    "@types/mocha": "^5.2.5",
-    "@types/node": "^10.17.28",
-    "@types/source-map-support": "^0.5.3",
-    "mocha": "^10.1.0",
-    "should": "^13.2.3",
-    "source-map-support": "^0.5.9",
-    "typescript": "^3.9.7"
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^18.16.5",
+    "@types/source-map-support": "^0.5.6",
+    "mocha": "^10.2.0",
+    "source-map-support": "^0.5.21",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
   },
   "main": "./lib/antsy.js",
   "types": "./lib/antsy.d.ts",
