--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,16 @@
 {
   "compilerOptions": {
-    "target": "es2017",
-    "module": "commonjs",
+    "module": "es2020",
+    "target": "es2022",
+    "esModuleInterop": true,
+    "moduleResolution": "node16",
     "strict": true,
     "sourceMap": true,
+    "noImplicitAny": true,
     "noImplicitReturns": true,
-    "rootDir": "src/",
     "outDir": "lib/",
     "declaration": true,
     "declarationDir": "lib/"
-  }
+  },
+  "include": [ "src/**/*.ts" ]
 }
