--- a/.mocharc.json
+++ b/.mocharc.json
@@ -4,7 +4,8 @@
     "node-option": [
         "es-module-specifier-resolution=node",
         "loader=ts-node/esm",
-        "no-warnings"
+        "no-warnings",
+        "enable-source-maps=true"
     ],
     "spec": [ "tests/**/*.test.ts" ]
 }
